change resource file

--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ build/
 ### VS Code ###
 .vscode/
 /src/main/resources/*.yml
-/src/main/resources/*.yaml
 /src/main/resources/*.properties
 /config.json
 /config*.json
+/config.yaml
