fix resource format

--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -3,10 +3,10 @@ appleTaskConfig:
   country: CN
   location: 广东 深圳 南山区
   deviceCodeList:
-    - MTQK3CH/A
-    - MTQL3CH/A
-    - MTQJ3CH/A
-    - MTQH3CH/A
+    - - MTQK3CH/A
+      - MTQL3CH/A
+      - MTQJ3CH/A
+      - MTQH3CH/A
   storeWhiteList: []
   pushConfigs:
     - barkPushUrl: ''
